.k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchparty-web
  namespace: watchparty
  labels:
    app: watchparty-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: watchparty-web
  template:
    metadata:
      labels:
        app: watchparty-web
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: web
          image: watchparty
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            failureThreshold: 3
